--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <header>
         <h1><a href="index.html"><font color='black'>Note</font></a></h1>
         <ul>
-          <li><a id="article" href="#article">blog<strong>Collection</strong></a></li>
-          <li><a id="gallery" href="#gallery">personal<strong>Gallery</strong></a></li>
+          <li><a id="article" href="#article">blog<strong>Movie</strong></a></li>
+          <li><a id="gallery" href="#gallery">personal<strong>Story</strong></a></li>
           <li><a id="about" href="#about">something<strong>About</strong></a></li>
         </ul>
         <div id="artlist">
