--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <header>
         <h1><a href="index.html"><font color='black'>Note</font></a></h1>
         <ul>
-          <li><a id="article" href="#article">blog<strong>Movie</strong></a></li>
-          <li><a id="gallery" href="#gallery">personal<strong>Story</strong></a></li>
-          <li><a id="about" href="#about">something<strong>About</strong></a></li>
+          <li><a id="article" href="#article">3分钟<strong>电影</strong></a></li>
+          <li><a id="gallery" href="#gallery">3分钟<strong>故事</strong></a></li>
+          <li><a id="about" href="#about">关于<strong>3MinutesMovie</strong></a></li>
         </ul>
         <div id="artlist">
         
