--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="index.html"><font color='black'>Note</font></a></h1>
+        <h1><a href="index.html"><font color='black'>3 Minutes Movie</font></a></h1>
         <ul>
           <li><a id="article" href="#article"><strong>电影</strong></a></li>
           <li><a id="gallery" href="#gallery"><strong>故事</strong></a></li>
