adding a chat bot
add chat bot

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <script type="text/javascript" src="javascripts/index.js"></script>
   	<script type="text/javascript" src="javascripts/scale.fix.js"></script>
 	  <script type="text/javascript" src="javascripts/showdown.min.js"></script>
-    
+    <!-- Chatra {literal} -->
+<script>
+    (function(d, w, c) {
+        w.ChatraID = 'keropPHoM2abTyHSL';
+        var s = d.createElement('script');
+        w[c] = w[c] || function() {
+            (w[c].q = w[c].q || []).push(arguments);
+        };
+        s.async = true;
+        s.src = 'https://call.chatra.io/chatra.js';
+        if (d.head) d.head.appendChild(s);
+    })(document, window, 'Chatra');
+</script>
+<!-- /Chatra {/literal} -->
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width">
