--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>3分钟电影,3分钟感动</title>
+    <title>3分钟影像,3分钟感动</title>
 	  <script type="text/javascript" src="javascripts/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="javascripts/index.js"></script>
   	<script type="text/javascript" src="javascripts/scale.fix.js"></script>
@@ -28,7 +28,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="index.html"><font color='black'>3 Minutes Movie</font></a></h1>
+        <h1><a href="index.html"><font color='black'>3分钟影像</font></a></h1>
         <ul>
           <li><a id="article" href="#article"><strong>电影</strong></a></li>
           <li><a id="gallery" href="#gallery"><strong>故事</strong></a></li>
@@ -41,7 +41,7 @@
 	  <section id="showarticle">
 	  </section>
       <footer>
-        <p><small>This project is maintained by <a id="review" href="index.html">Evel Liu</a></small></p>
+        <p><small>This project is maintained by <a id="review" href="index.html">Eama</a></small></p>
       </footer>
     </div>
   </body>
