Update the index page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	  <section id="showarticle">
 	  </section>
       <footer>
-        <p><small>This project is maintained by <a id="review" href="index.html">Eama</a></small></p>
+        <p><small>This project is maintained by <a id="review" href="index.html">Eama Chen</a></small></p>
       </footer>
     </div>
   </body>
